* Adding some citations for HotDep10.

--- a/doc/references/acmtoplas.bib
+++ b/doc/references/acmtoplas.bib
@@ -1,3 +1,5 @@
+@string{TOPLAS="ACM Transactions on Programming Languages and Systems"}
+
 @ARTICLE{Herlihy90,
     AUTHOR = "Maurice P. {Herlihy} and Jeanette M. {Wing}",
     TITLE = "{L}inearizability: {A} correctness condition for concurrent objects",
@@ -20,4 +22,16 @@
   pages = "1512--1542",
   volume = "16",
   number = "5",
+}
+
+@article{misra:axioms:toplas1986,
+author = "Misra, J.",
+title = "Axioms for memory access in asynchronous hardware systems",
+year = "1986",
+journal = TOPLAS,
+month = "January",
+year = "1986",
+pages = "142--153",
+volume = "8",
+number = "1",
 }
