--- a/doc/references/books.bib
+++ b/doc/references/books.bib
@@ -39,3 +39,10 @@ edition = "3rd",
 publisher = "O'Reilly",
 year = "2004",
 }
+
+@book{clr:intro-algs:1990,
+author = "Cormen, T. and Leiserson, C. and Rivest, R.",
+title = "Introduction to Algorithms",
+publisher = "MIT Press",
+year = "1990",
+}
