* Progress in writing up paper; main change is the HP-KVS section;   mainly copied-and-pasted from TechCon final copy.

--- a/doc/references/dsn.bib
+++ b/doc/references/dsn.bib
@@ -48,6 +48,10 @@ doi={10.1109/DSN.2006.5},
 ISSN={}, 
 }
 
-
-
+@inproceedings{anderson:phh:dsn2010,
+title = "Efficient eventual consistency in {Pahoehoe}, an erasure-coded key-blob archive",
+author = "Anderson, E. and Li, X. and Merchant, A. and Shah, M. A. and Smathers, K. and Tucek, J. and Uysal, M. and Wylie, J. J.",
+crossref = {dsn10},
+note = "To appear",
+}
 
