--- a/doc/references/venues-long.bib
+++ b/doc/references/venues-long.bib
@@ -181,6 +181,13 @@
  month = {June},
 }
 
+@PROCEEDINGS { dsn10,
+ title = {Proceedings of the International Conference on Dependable Systems and Networks (DSN'10)},
+ booktitle = {Proceedings of the International Conference on Dependable Systems and Networks (DSN'10)},
+ year = {2010},
+ month = {June},
+}
+
 % FAST
 
 @PROCEEDINGS { fast03,
