--- a/doc/references/venues-short.bib
+++ b/doc/references/venues-short.bib
@@ -177,6 +177,13 @@
  month = {June},
 }
 
+@PROCEEDINGS { dsn10,
+ title = {DSN'10},
+ booktitle = {DSN'10},
+ year = {2010},
+ month = {June},
+}
+
 % FAST
 
 @PROCEEDINGS { fast03,
