--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -173,3 +173,9 @@
   key = "voldemort"
 }
 
+@miscP{s3:web,
+  author = "Amazon",
+  title = "Amazon's Simple Storage Service",
+  note = {Available at \url{http://aws.amazon.com/s3}.  Accessed May 2010},
+  key = "s3",
+}
