--- a/doc/references/tr.bib
+++ b/doc/references/tr.bib
@@ -5,3 +5,10 @@
   year = "2007",
   number = "CMU-CS-07-128"
 }
+
+@techreport{pierce:atomic-semantics:2000,
+author = "Pierce, E. and Alvisi, L.",
+title = "A recipe for atomic semantics for {B}yzantine quorum systems",
+institution = "University of Texas at Austin",
+year = "2000",
+}
