* Fixing an entry.

--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -174,7 +174,7 @@
 }
 
 @misc{s3:web,
-  title = "Amazon's Simple Storage Service",
-  note = "Available at \url{http://aws.amazon.com/s3}  Accessed May 2010",
+  title = "Amazon's {Simple} {Storage} {Service}",
+  note = "Available at \url{http://aws.amazon.com/s3}.  Accessed May 2010",
   key = "s3"
 }
