* A few new entries.

--- a/doc/references/web-sites.bib
+++ b/doc/references/web-sites.bib
@@ -178,3 +178,22 @@
   note = "Available at \url{http://aws.amazon.com/s3}.  Accessed May 2010",
   key = "s3"
 }
+
+@misc{google-storage:web,
+  title = "Google {S}torage for {D}evelopers",
+  note = "Available at \url{http://code.google.com/apis/storage}.  Accessed May 2010",
+  key = "google-storage"
+}
+
+@misc{brewer:cap:web,
+  author = "Brewer, E.",
+  title = "Towards robust distributed systems",
+  note = "Available at \url{http://www.cs.berkeley.edu/~brewer/cs262b-2004/PODC-keynote.pdf}.  Accessed May 2010",
+  year= "2000",
+}
+
+@misc{azure:web,
+  title = "Microsoft {W}indows {A}zure {P}latform",
+  note = "Available at \url{http://www.microsoft.com/windowsazure}.  Accessed May 2010",
+  key = "azure"
+}
