* Fixing an entry.

--- a/doc/references/hotdep.bib
+++ b/doc/references/hotdep.bib
@@ -1,10 +1,10 @@
+%   note      = {available at \url{http://www.usenix.org/events/hotdep08/tech/full_papers/aiyer/aiyer.pdf}},
 @inproceedings{aiyer+alsw:consistability:2008,
   author    = {Amitanand S. Aiyer and Eric Anderson and
                Xiaozhou Li and Mehul A. Shah and  Jay J. Wylie},
   title     = {Consistability: Describing Usually Consistent Systems},
   booktitle = {HotDep},
   year      = {2008},
-  note      = {available at \url{http://www.usenix.org/events/hotdep08/tech/full_papers/aiyer/aiyer.pdf}},
   crossref  = {DBLP:conf/hotdep/2008},
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
