30/C0: Finish carry over review 29/PC1
doc/references/rfcs.bib
  - added citation for ISO8601

--- a/doc/references/rfcs.bib
+++ b/doc/references/rfcs.bib
@@ -3,3 +3,9 @@
   note = "Available at \url{http://www.ietf.org/rfc/rfc2616.txt}",
   key = "rfc2616",
 }
+
+@misc{ISO8601,
+  title = "{International Standard Date and Time Notation}",
+  note = "Available at \url{http://www.cl.cam.ac.uk/~mgk25/iso-time.html}",
+  key = "iso8601",
+}
