30/CG: added rfc references

--- a/doc/references/rfcs.bib
+++ b/doc/references/rfcs.bib
@@ -9,3 +9,28 @@
   note = "Available at \url{http://www.cl.cam.ac.uk/~mgk25/iso-time.html}",
   key = "iso8601",
 }
+
+@misc{RFC1035,
+  title = "{Domain Names - Implementation and Specification}",
+  note = "Available at \url{http://www.ietf.org/rfc/rfc1035.txt}",
+  key = "1035",
+}
+
+@misc{RFC1123,
+  title = "{Requirements for Internet Hosts -- Application and Support}",
+  note = "Available at \url{http://www.ietf.org/rfc/rfc1123.txt}",
+  key = "1123",
+}
+
+@misc{RFC2181,
+  title = "{Clarifications to the DNS Specification}",
+  note = "Available at \url{http://www.ietf.org/rfc/rfc2181.txt}",
+  key = "2181",
+}
+
+@misc{RFC3696,
+  title = "{Application Techniques for Checking and Transformation of Names}",
+  note = "Available at \url{http://www.ietf.org/rfc/rfc3696.txt}",
+  key = "3696",
+}
+
