--- a/doc/references/rfcs.bib
+++ b/doc/references/rfcs.bib
@@ -34,3 +34,9 @@
   key = "3696",
 }
 
+@misc{RFC3492,
+  title = "{Punycode: A Bootstring encoding of Unicode for Internationalized Domain Names in
+                  Applications (IDNA)}",
+  note = "Available at \url{http://www.ietf.org/rfc/rfc3492.txt}",
+  key = "3492",
+}
