* 31/EA: Finished addressing reviewers' and Jay's comments; two   TODO-mshah's to see if Mehul can handle those comments better than   me.

--- a/doc/references/tr.bib
+++ b/doc/references/tr.bib
@@ -12,3 +12,12 @@ title = "A recipe for atomic semantics for {B}yzantine quorum systems",
 institution = "University of Texas at Austin",
 year = "2000",
 }
+
+@techreport{anderson:consistency-checking-tr:2010,
+author = "Anderson, E. and Li, X. and Shah, M. and Tucek, J. and Wylie, J. J.",
+title = "What consistency does your key-value store actually provide?",
+institution = "Hewlett-Packard Laboratories",
+year = "2010",
+number = "HPL-2010-98",
+}
+
