* 32/B3: Filled in the page numbers for two recently appeared papers   and removed the "To appear" note.

--- a/doc/references/dsn.bib
+++ b/doc/references/dsn.bib
@@ -52,6 +52,6 @@ ISSN={},
 title = "Efficient eventual consistency in {Pahoehoe}, an erasure-coded key-blob archive",
 author = "Anderson, E. and Li, X. and Merchant, A. and Shah, M. A. and Smathers, K. and Tucek, J. and Uysal, M. and Wylie, J. J.",
 crossref = {dsn10},
-note = "To appear",
+pages = "181--190",
 }
 
