--- a/doc/references/socc.bib
+++ b/doc/references/socc.bib
@@ -5,5 +5,5 @@ author = "Cooper, B. F. and Silberstein, A. and Tam, E. and Ramakrishnan, R. and
 title = "Benchmarking cloud serving systems with {YCSB}",
 booktitle = socc,
 year = "2010",
-note = "To appear",
+pages = "143--154",
 }
