* Add packaging for redhat; as part of that, fix mercury-plot to not   require IO::Pty or Data::ShowTable so we can build it successfully   on redhat.
make-rpm.sh: replaced with redhat/rules; latter allows for partial rebuild during testing.

fix-install.sh: factor out the code that fixes up the install after cmake puts in
  rpath's that we don't want.

copy-tar.sh: script to copy the generated tar file to the rpm source directory

get-version.sh: script to extract the current version from the debian changelog, and
  the release from the redhat spec file.  This approach guarantees consistent versioning, 
  between our two main styles of releases assuming we always try to rebuild both.

make-tar.sh: Create both the Lintel.spec file and the Lintel-<version>.tar.gz files

patch-spec.pl: Patch up the .spec file to replace the __*__ bits.  In particular we keep
  the descriptions consistent between debian and redhat.

rules: makefile for building the rpm.

CMakeConfig.txt: Remove with of IO::Pty; nothing uses it now.
  Change mercury-plot dependencies to just generate a warning if Data::ShowTable is
  not present; it will work, just not quite as well.

debian/changelog: update changelog message, packaging should work on ubuntu also, so
  call it dpkg packaging.

debian/control: Add dependency on liblintel-perl to lintel-utils

debian/rules: Factor out the code that fixes up after the install into fix-install.sh; 
  remove the obsolete configure call.

Lintel.spec.in: Tons of changes to get the packaging description working again and to
  split things into lots of separate packages.

src/mercury-plot.in: Remove the dependency on IO::Pty and Data::ShowTable; the former is
  removed by using a different method for synchronizing with gnuplot -- we now have it
  execute a command to create a file when it has synchronized.  The latter by having a 
  csv mode that does not require the showtable module.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 lintel (0.2011.03.12-1) unstable; urgency=low
 
-  * Initial debian packageing
+  * Initial dpkg packaging
 
  -- Eric Anderson <anderse@hpl.hp.com>  Sat, 12 Mar 2011 21:19:35 -0800
