* Really hoping the release works now
NEWS: Update news to note release

changelog: update changelog to note release

martenot-copy: Fix directory for source copy bits, it's now test-remote

mock-cfg.pl: If we are building old versions of centos, go to the vault.

rules: Build older versions of centos using the value.  5.2 fails because we
  don't create /usr/lib/debug, so not fixing it for now.

Lintel.spec.in: Update changelog for release.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintel (0.2011.06.07) unstable; urgency=low
+
+  * Release.  See NEWS for major changes.
+
+ -- Eric Anderson <anderse@hpl.hp.com>  Tue, 07 Jun 2011 13:15:46 -0700
+
 lintel (0.2011.03.12) unstable; urgency=low
 
   * Initial dpkg packaging
