--- a/src/dotfiles/README
+++ b/src/dotfiles/README
@@ -1,15 +1,17 @@
 If this README file is in ~/.dotfiles; then it was copied out of some Lintel version, you can
 update or initialize your dotfiles by running .../Lintel/src/dotfiles/setup; the commands to see
-what has changes will be printed to the screen.
+what has changed will be printed to the screen.
 
 These dotfiles are the shared ones that part of our group has been using for several years.  They
 have many useful functions for interfacing between zsh and deptool, they also set up an environment
-which is relatively productive.  Because they are derived from one person's dotfiles, they also
-have some remaining cruft in them that was mostly cleaned up when they were incorportated into
-Lintel, there is likely some remaining bits needed.
+which is relatively productive.  These dotfiles were derived from one person's dotfiles, and so
+they may have some remaining cruft in them, even though they were cleaned up for incorporation into
+Lintel. 
 
 Customization is handled by creating the file ~/.<whatever>.{early,late}; the .early variant will
 be applied at the beginning of the .<whatever> file and can be used to set variables for
 customization.  The .late variant will be applied at the end of the .<whatever> file, and can be
 used to build additional customization and/or override decisions made in the common files.  This
 customization is currently present for emacs, zshrc, and zshenv.
+
+TODO-anderse: Not sure what other documentation is needed... Should there be a command 'dotfiles' that has a help which lists some of this README and or points at Lintel/src/dotfiles or something? Or that sees if you have the most recent dotfiles installed? I believe this stuff is under-documented, but I am not sure how to fix it without a bunch of (not valuable) work producing explanations/documentation that will be out of date whenever the dotfiles stuff changes. So, my main concern is making it easy to find the dotfiles stuff, and to know if your dotfiles are up to date or not.
