* More fixups discovered with second user; partial set of fixes for review     comments.
rpmmacros: should never have been included.

README: add TODO-eric about better "docs"

Xresources remove obsolete wmStartupCommand

fvwm2rc: Remove todo, discussed.

setup: Remove todo, fixed.

zsh-buildfns: Remove duplicate code for new-deptool-base, mainline, etc; it's now
  in zsh-buildenv since it sets up the environment.

zsh-env-common: Add in missing IN_ZSHENV_COMMON that removes problem with "reload" not being
  found and removes a possible source of recursion in the dotfiles.

--- a/src/dotfiles/README
+++ b/src/dotfiles/README
@@ -1,6 +1,8 @@
 If this README file is in ~/.dotfiles; then it was copied out of some Lintel version, you can
 update or initialize your dotfiles by running .../Lintel/src/dotfiles/setup; the commands to see
-what has changed will be printed to the screen.
+what has changed will be printed to the screen.  TODO-eric: note that if you already have a a file
+it won't overwrite, and you need to run setup in .dotfiles the first time to make it apply to your
+homedir (or make setup do that automatically?)
 
 These dotfiles are the shared ones that part of our group has been using for several years.  They
 have many useful functions for interfacing between zsh and deptool, they also set up an environment
