--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
+Remove all of the static classes that are not just base types; replace it with the static inside
+function returning reference trick.  It just seems unsafe to have the static classes, the most
+recent case was in program options which was failing with a bus error converting doubles into
+strings for the help text on openbsd-4.9-amd64 (and only that variant, either 5.0 or i386 worked).
+
+
 Update all of the classes to follow the guidelines in:
 http://techbase.kde.org/Policies/Binary_Compatibility_Issues_With_C++
 so we can maintain binary compatibility easier.
