Fixups found during work on release testing
changelog: need to have a recent version to match the testing of the release.

debian/rules: project-builder overwrites the debian directory; move fix-install.sh into dist.
  Update the ChangeLog name to match what project-builder wants and remove the .mtn since we're
  now on git.

fix-install.sh: remove build user's path from built file.

make-release-changelog.sh: Update the changelog generation to work with git rather than monotone.

dist/rules: Add more to the help.  Update the way we do prep-release so that we can make it a
  dependency for snapshot-tar.  Add rule to generate a snapshot of the source code so we can test
  multiple things without having to commit each time.

Lintel.spec.in: same fix as changelog

make-tar.sh: Update to work with git, to verify that the necessary files are generated, and fix
  some bugs that occur from running the script multiple times or not having the SOURCES directory.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintel (0.2012.02.28) unstable; urgency=low
+
+  * Release testing
+
+ -- Eric Anderson <anderse@hpl.hp.com>  Thu, 01 Mar 2012 14:47:54 -0800
+
 lintel (0.2011.06.13) unstable; urgency=low
 
   * Release.  See NEWS for major changes.
