--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,24 @@ This file lists major changes to Lintel.  The full reverse-chronological change
 log (without the merge revisions) can be found in the Changelog.mtn file in the
 tar releases, or by using mtn log if you got the sources via version control.
 
+2012-05-11:
+   * Release.  Repositories with packages seem to be functional for all OSs we build packages for.
+     Version control has been moved to git and stored on github: https://github.com/dataseries
+     Source builds now tested on OpenBSD, FreeBSD, and MacOS.  Packaging now handled using
+     project-builder.
+
+2012-04-12:
+   * Add scripts for preparing freebsd/openbsd virtual machines.
+
+2011-12-11: 
+   * Deptool working with git for the version control.
+
+2011-09-29:
+   * Add in the shared dotfiles used by our group.
+
+2011-06-29:
+   * Add in support for a Deque iterator.
+
 2011-06-13:
    * Release.  Repositories with packages seem to be functional for the few OSs I can easily test.
 
