trivial change to check authentication of git

--- a/TODO
+++ b/TODO
@@ -23,3 +23,5 @@ it's roughly balanced.
 
 HashMap.H: figure out why HashMap<const std::string, int> gives a
 compiler error with gcc-4.1
+
+yet another trivial change
